misc: try -webkit-overflow-scrolling: touch on body to prevent strange scroll stuttering on iOS Safari and update loading spinner background

--- a/src/app/shared/ui-components/loading-spinner/loading-spinner.component.scss
+++ b/src/app/shared/ui-components/loading-spinner/loading-spinner.component.scss
@@ -7,7 +7,15 @@
   bottom: 0;
   left: 0;
   z-index: 110;
+  // background-color: $subtle-two;
+
+  background-size: 30px 30px;
   background-color: $subtle-two;
+  background-image: radial-gradient(
+    circle,
+    #c3c3c3ce 0.5px,
+    rgba(143, 207, 197, 0) 1px
+  );
   
   .loading-spinner {
     position: fixed;
