--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,13 +8,6 @@
 @import './assets/stylesheets/breakpoints.scss';
 @import './assets/stylesheets/variables.scss';
 
-
-// still not sure why this is the only way to get permanantly rid of the loading screen 
-// and why removing the element will put it back in at a weired space inside the dom
-:root {
-  --loading-screen-display: block;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -25,14 +18,6 @@ a {
   text-decoration: none;
 }
 
-/* html, body {
-  height: 100%;
-} */
-
-/* body {
-  background-color: $subtle-one;
-} */
-
 body {
   min-height: 100vh;
   background-size: 30px 30px;
@@ -42,6 +27,7 @@ body {
     #c3c3c3ce 0.5px,
     rgba(143, 207, 197, 0) 1px
   );
+  -webkit-overflow-scrolling: touch;
 }
 
 /* body {
